# bounce-cli-iosxe

./: README.md  bounce.py  bounce.tcl  bounce_en.tcl  config.yaml  deploy_guestshell_script.py  deploy_tcl_script.py  pyproject.toml
inventory/: groups.yaml  hosts.yaml
